--- a/crates/lib/luxseed-rhi/Cargo.toml
+++ b/crates/lib/luxseed-rhi/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.0.1"
 edition = "2021"
 
 [dependencies]
+gpu-allocator = "0.24.0"
 anyhow = "1.0.70"
 log = "0.4.17"
 glam = { version = "0.24", default-features = false, features = ["libm"] }
