--- a/crates/lib/luxseed-rhi/Cargo.toml
+++ b/crates/lib/luxseed-rhi/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 gpu-allocator = "0.24.0"
 anyhow = "1.0.70"
 bitflags = "2.4.1"
+smallvec = "1.11.2"
 log = "0.4.17"
 raw-window-handle = "0.5.2"
 
