--- a/crates/bin/luxseed-rhi-test/Cargo.toml
+++ b/crates/bin/luxseed-rhi-test/Cargo.toml
@@ -12,3 +12,4 @@ env_logger = "0.9.0"
 dotenvy = "0.15.7"
 shaderc = "0.8.2"
 anyhow = "1.0.70"
+glam = { version = "0.24", default-features = false, features = ["libm"] }
