--- a/crates/lib/luxseed-render-backend/Cargo.toml
+++ b/crates/lib/luxseed-render-backend/Cargo.toml
@@ -10,7 +10,7 @@ bitflags = "2.4.1"
 smallvec = "1.11.2"
 log = "0.4.17"
 raw-window-handle = "0.5.2"
-
+luxseed-utility = { path = "../luxseed-utility" }
 # Vulkan
 ash = { version = "0.37.2+1.3.238", default-features = false, features = [
     "linked",
