--- a/crates/lib/luxseed-render-backend/Cargo.toml
+++ b/crates/lib/luxseed-render-backend/Cargo.toml
@@ -12,8 +12,15 @@ log = "0.4.17"
 raw-window-handle = "0.5.2"
 luxseed-utility = { path = "../luxseed-utility" }
 # Vulkan
-ash = { version = "0.37.2+1.3.238", default-features = false, features = [
+ash = { version = "0.37.2", default-features = false, features = [
     "linked",
     "debug",
 ] }
 ash-window = "0.12.0"
+
+[dev-dependencies]
+winit = "0.28.3"
+glam = { version = "0.24", default-features = false, features = ["libm"] }
+shaderc = "0.8.2"
+raw-window-handle = "0.5.2"
+image = '0.24.7'
